WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231036
Fix !ENABLE(WIRELESS_PLAYBACK_TARGET) build after
r283319
https://bugs.webkit.org/show_bug.cgi?id=231036
Summary
Fix !ENABLE(WIRELESS_PLAYBACK_TARGET) build after r283319
Christopher Reid
Reported
2021-09-30 13:00:36 PDT
.
Attachments
patch
(1.78 KB, patch)
2021-09-30 13:04 PDT
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2021-09-30 13:04:35 PDT
Created
attachment 439776
[details]
patch
EWS
Comment 2
2021-09-30 13:44:29 PDT
Committed
r283333
(
242354@main
): <
https://commits.webkit.org/242354@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439776
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-09-30 13:45:16 PDT
<
rdar://problem/83735743
>
Ryan Haddad
Comment 4
2021-09-30 13:50:24 PDT
Sorry for the breakage!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug