Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp
@@ -49,7 +49,6 @@
 #include "TrackPrivateRemoteConfiguration.h"
 #include "WebCoreArgumentCoders.h"
 #include <WebCore/LayoutRect.h>
-#include <WebCore/MediaPlaybackTargetContext.h>
 #include <WebCore/MediaPlayer.h>
 #include <WebCore/MediaPlayerPrivate.h>
 #include <WebCore/NotImplemented.h>
